data fetched on Cards.jsx

--- a/src/resource/Card/Card.module.css
+++ b/src/resource/Card/Card.module.css
@@ -1,1 +1,10 @@
  
+ .container{
+     display: flex;
+     justify-content: space-evenly;
+     flex-wrap: wrap;
+ }
+
+ .card{
+     width: 350px;
+ }
