--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,6 +5,7 @@
  /* styling all contents */
  .container{
      display: flex;
+     flex-direction: column;
      justify-content: center;
      align-items: center;
  }
