--- a/src/resource/Card/Card.module.css
+++ b/src/resource/Card/Card.module.css
@@ -1,10 +1,11 @@
  
  .container{
+     width: 95%;
      display: flex;
      justify-content: space-evenly;
      flex-wrap: wrap;
  }
 
  .card{
-     width: 350px;
+     width: 370px;
  }
