--- a/src/resource/Card/Card.module.css
+++ b/src/resource/Card/Card.module.css
@@ -20,3 +20,9 @@
     border-bottom: 40px solid rgba(0,0,255,.5);
 }
 
+@media screen and (max-width: 820px) {
+    .first, .second, .third {
+      width: 92%;
+      margin-left: 4%;
+    }
+  }
