--- a/src/resource/EachCountry/Each.module.css
+++ b/src/resource/EachCountry/Each.module.css
@@ -5,3 +5,10 @@
     height: 40px;
     margin-top: 100px;
 }
+
+@media screen and (max-width: 820px) {
+    .container {
+      width: 94%;
+      margin-left: 3%;
+    }
+  }
